[tool.poetry]
name = "blink"
version = "0.1.0"
description = ""
authors = ["Pedro Rodriguez <me@pedro.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.6"
pysolr = "3.8"
emoji = "0.5.3"
regex = "2020.1.8"
matplotlib = "^3.3.3"
tqdm = "^4.53.0"
nltk = "3.4.5"
numpy = "^1.19.4"
segtok = "1.5.7"
flair = "0.6.1"
pytorch-transformers = "1.2"
transformers = "3.1"
colorama = "0.4.3"
termcolor = "1.1"
faiss-cpu = "^1.6.4"
fastapi = "^0.61.2"
uvicorn = "^0.12.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
